--- a/_posts/2016-11-20-Rosliny.md
+++ b/_posts/2016-11-20-Rosliny.md
@@ -1,32 +1,34 @@
 ---
 layout: post
 title: Rośliny
-permalink: /posts/
 image: http://upload.wikimedia.org/wikipedia/commons/thumb/4/4e/Lophophora_williamsii_ies.jpg/250px-Lophophora_williamsii_ies.jpg
 table: ['one','two','three']
+
 ---
 ![Photo]({{page.image}})
 
+>Pejotl (Lophophora williamsii)
+
 W jakich roślinach występują substancje psychoaktywne?
 1. Psychodeliki:
-..* Banisteriopsis caapi i Psychotria viridis – najczęstszy surowiec do sporządzania napoju ayahuasca – zawiera DMT oraz MAOI
-..* niektóre rośliny z rodzaju powojowatych, np. Argyreia nervosa, Ipomoea violacea lub wilce – zawierają m.in. amid kwasu lizerginowego
-..* ololiuqui (Rivea corymbosa) – zawiera amid kwasu lizerginowego
-..* iboga (Tabernanthe iboga) – zawiera ibogainę
-..* barwinek różowy (Catharanthus roseus) – zawiera ibogainę
-..* Trichocereus peruvianus – zawiera meskalinę
-..* pejotl (Lophophora williamsii) – zawiera meskalinę
-..* san pedro (Trichocereus pachanoi) – zawiera meskalinę
-..* Trichocereus macrogonus – zawiera meskalinę
+  * Banisteriopsis caapi i Psychotria viridis – najczęstszy surowiec do sporządzania napoju ayahuasca – zawiera DMT oraz MAOI
+  * niektóre rośliny z rodzaju powojowatych, np. Argyreia nervosa, Ipomoea violacea lub wilce – zawierają m.in. amid kwasu lizerginowego
+  * ololiuqui (Rivea corymbosa) – zawiera amid kwasu lizerginowego
+  * iboga (Tabernanthe iboga) – zawiera ibogainę
+  * barwinek różowy (Catharanthus roseus) – zawiera ibogainę
+  * Trichocereus peruvianus – zawiera meskalinę
+  * pejotl (Lophophora williamsii) – zawiera meskalinę
+  * san pedro (Trichocereus pachanoi) – zawiera meskalinę
+  * Trichocereus macrogonus – zawiera meskalinę
 2. Quasi-psychodeliki:
-..* konopie siewne – zawierają THC
-..* gałka muszkatołowa (Myristica fragrans) – zawiera mirystycynę
-..* bylica piołun (Artemisia absinthium) – zawiera tujon
+  * konopie siewne – zawierają THC
+  * gałka muszkatołowa (Myristica fragrans) – zawiera mirystycynę
+  * bylica piołun (Artemisia absinthium) – zawiera tujon
 3. Dysocjanty:
-..* szałwia wieszcza (Salvia divinorum - zawiera salwinoryne A)
+  * szałwia wieszcza (Salvia divinorum - zawiera salwinoryne A)
 4. Delirianty:
-..* wilcza jagoda (Atropa belladonna) – zawiera alkaloidy tropanowe
-..* lulek czarny (Hyoscyamus niger) – zawiera alkaloidy tropanowe
-..* mandragora (Mandragora sp.) – zawiera alkaloidy tropanowe
-..* bieluń (Datura sp.) – zawiera alkaloidy tropanowe
-..* sinicuichi (Heimia salicifolia) – zawiera wertynę
+  * wilcza jagoda (Atropa belladonna) – zawiera alkaloidy tropanowe
+  * lulek czarny (Hyoscyamus niger) – zawiera alkaloidy tropanowe
+  * mandragora (Mandragora sp.) – zawiera alkaloidy tropanowe
+  * bieluń (Datura sp.) – zawiera alkaloidy tropanowe
+  * sinicuichi (Heimia salicifolia) – zawiera wertynę
